# AeroAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PPT.pptx  README.md  proposal.md  pyproject.toml
aerosafety/: __init__.py  determinism.py  io.py
aerosafety/agents/: __init__.py  base.py  llm_client.py  mock_llm.py  system1_direct.py  system2_rag.py  system3_tool_aug.py  system4_multi_agent.py  system5_aero_sft.py  system6_aero_dpo.py  system7_verifier_gated.py
aerosafety/config/: __init__.py  base.yaml  model_registry.yaml
aerosafety/data/: README.md  contamination_check.py  task_setup_audit.py
aerosafety/eval/: __init__.py  adapters.py  cass.py  ccs.py  evidence_faithfulness.py  failure_taxonomy.py  length_controlled.py  ofr.py  protocols.py  reporting.py  runner.py  scor.py  statistics.py  svr.py  swfr.py  tool_use_reliability.py  tsr.py
aerosafety/logging/: __init__.py  logger.py
aerosafety/smoke_test/: __init__.py  annotate.py  mock_run.py  report.py  runner.py
aerosafety/tasks/: __init__.py
aerosafety/tools/: __init__.py  mel_checker.py  metar_parser.py  notam_parser.py  optimization_solver.py  registry.py  separation_calculator.py  taf_parser.py  time_window_checker.py  wake_category_checker.py  weather_minima_checker.py  wind_component.py
aerosafety/training/: __init__.py  cli.py  dataset_builder.py  gpu_check.py  schemas.py  splits.py  train_dpo.py  train_sft.py  train_verifier.py
data/: README.md
data/multimodal/: README.md
data/raw/: README.md
data/review/: README.md
data/synthetic/: README.md
docs/: PR_phase1_foundation.md  expert_review_protocol.md
grant-proposal/: AeroSafetyEval_Research_Proposal_ZH.docx
scripts/: extract_airport_diagrams.py  fix_integrity_issues.py  fix_integrity_round2.py  fix_integrity_round3.py  fix_integrity_round4.py  fix_task_setup.py  generate_mm_as_cards.py  generate_wd3_cards.py
tests/: conftest.py  test_determinism.py  test_io_schemas.py  test_logging.py
tests/agents/: __init__.py  test_mock_llm.py  test_system1_direct.py  (+4 more)
(+126 files in other folders)
