[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aerosafety"
version = "0.1.0-dev"
description = "Reliability Limits of Agentic AI in Aviation Operations and Safety — AeroSafetyEval research package"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# All dependencies must be pinned to a minimum version.
# No installation should happen silently — if a dep is missing the code raises.
dependencies = [
    # Config
    "pyyaml>=6.0",
    # Schema validation
    "pydantic>=2.7",
    # HTTP / API clients
    "httpx>=0.27",
    "openai>=1.40",
    "anthropic>=0.34",
    # Optional: structured logging ergonomics
    "structlog>=24.0",
    # Optional: hardware monitoring
    "psutil>=5.9",
    # Data handling (no pandas — polars for performance + determinism)
    "polars>=1.0",
    # Retrieval / embeddings (optional, imported only when use_rag=True)
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8; sys_platform != 'darwin'",
    # Evaluation
    "nltk>=3.8",
    "rouge-score>=0.1",
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
]
gpu = [
    "torch>=2.3",
    "transformers>=4.40",
    "peft>=0.11",
    "trl>=0.9",
    "datasets>=2.19",
    "accelerate>=0.30",
    "sentence-transformers>=3.0",
    "faiss-gpu>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["aerosafety"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Fail immediately on warnings from aerosafety package (strict mode)
filterwarnings = [
    "error::DeprecationWarning:aerosafety",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "PLC", "PLE", "PLR", "PLW"]
ignore = ["PLR2004", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
